--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 STM32 using CUBE IDE and Nucleo F303RE.
 
-Multi threaded RTOS embedded system communnicating via CAN SPI
+Multi threaded RTOS embedded system communnicating via CAN SPI and I2C to other CAN devices ad se$sors
