--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 STM32 using CUBE IDE and Nucleo F303RE.
 
 Multi threaded RTOS embedded system communnicating via CAN SPI and I2C to other CAN devices and sensors.
+Saves sensor data to and FA SD card 
